{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 11,
  "lineage": "9d13ee78-3351-e8e1-484e-8812b5969fd4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486560520867:vpc/vpc-0cac8cd860ede88c5",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0abaec8c925f41b1e",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-08731f514afabd2a0",
                "cidr_block": "10.50.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-048604ba59d01472b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cac8cd860ede88c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed2c045970d79f0c",
            "owner_id": "486560520867",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "hulft-mcp-alb-logs-486560520867",
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:486560520867:loadbalancer/app/mcp-shared-alb/cbc61eac27e289a2",
            "arn_suffix": "app/mcp-shared-alb/cbc61eac27e289a2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mcp-shared-alb-1704939579.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:486560520867:loadbalancer/app/mcp-shared-alb/cbc61eac27e289a2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mcp-shared-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-018cbf9580e6d595e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05fd3d7bd94a1ff0c"
              },
              {
                "subnet_id": "subnet-0e08593ecb2ad43b8"
              }
            ],
            "subnets": [
              "subnet-05fd3d7bd94a1ff0c",
              "subnet-0e08593ecb2ad43b8"
            ],
            "vpc_id": "vpc-0cac8cd860ede88c5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.public",
            "data.aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:486560520867:listener/app/mcp-shared-alb/cbc61eac27e289a2/a2006a7a356c2b62",
            "certificate_arn": "arn:aws:acm:us-east-1:486560520867:certificate/01dfadfa-3ea4-48ad-80e1-be6ec3f3e83f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:486560520867:listener/app/mcp-shared-alb/cbc61eac27e289a2/a2006a7a356c2b62",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:486560520867:loadbalancer/app/mcp-shared-alb/cbc61eac27e289a2",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.shared",
            "aws_security_group.alb",
            "data.aws_acm_certificate.wildcard",
            "data.aws_subnets.public",
            "data.aws_vpc.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486560520867:security-group/sg-018cbf9580e6d595e",
            "description": "Security group for shared MCP ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018cbf9580e6d595e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mcp-shared-alb-sg",
            "name_prefix": "",
            "owner_id": "486560520867",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cac8cd860ede88c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.shared"
          ]
        }
      ]
    }
  ]
}